python_blp/nohup.out
Traceback (most recent call last):
  File "main.py", line 6, in <module>
    from SupplyAnalysis import SupplyAnalysis
  File "/home/rbrandao/congelados/python_blp/SupplyAnalysis.py", line 12
    nclass SupplyAnalysis(BLP):
                        ^
SyntaxError: invalid syntax
